--- a/regular_expressions/lesson6/index.html
+++ b/regular_expressions/lesson6/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Homework</title>
+		
+	</head>
+	<body>
+		<script src="script.js">
+			
+		</script>
+	</body>
+</html>
