--- a/Работа с локальным хранилищем/lesson 5/index.html
+++ b/Работа с локальным хранилищем/lesson 5/index.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+<title> </title>
+<meta charset="utf-8">
+</head>
+<body>
+<div id="wrapper">
+<div id="nav">
+<button id="left">Назад</button>
+<input id="date">
+<input id="month">
+<input id="year">
+<button id="right">Вперёд</button>
+</div>
+<textarea id="text"></textarea>
+<div id="event">
+<button id="show">Показать</button>
+<button id="save">Сохранить</button>
+</div>
+</div>
+</body>
+<script type="text/javascript" src=script.js>
+</script>
+</body>
+</html>
