--- a/Работа с canvas/index.html
+++ b/Работа с canvas/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<title>Spice N Vaders</title>
+</head>
+<script src="script.js"></script>
+<link rel="stylesheet" href="styles.css">
+<body onLoad="ImagesInit();timer();">
+<div class="parent">
+    <div class="inner">
+		<canvas id = "canvas" width="800" height="600">
+		</canvas>
+	</div>
+</div>
+</body>
+</html>
