--- a/Работа с локальным хранилищем/lesson 3/index.html
+++ b/Работа с локальным хранилищем/lesson 3/index.html
@@ -1,1 +1,40 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8"/>
+		<title>Lesson 3</title>
+	</head>
+	<body>
+		<form name="Work" onsubmit="Work_submit(event)">
+			
+				<input type="text"></p>
+			
+				<input type="text"></p>
+			
+				<input type="checkbox"> text </p>
+			
+				<input name="test" type="radio">1
+				<input name="test" type="radio">2
+				<input name="test" type="radio">3
+			</p>
+			
+				<select>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+				</select>
+			</p>
+			
+				<select multiple>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+				</select>
+			</p>
+			
+		</form>
+		<script src="script.js"></script>
+	</body>
+</html>
