--- a/Работа с локальным хранилищем/lesson 4/index.html
+++ b/Работа с локальным хранилищем/lesson 4/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+<title>Lesson 4</title>
+<meta charset="utf-8">
+</head>
+<body>
+<div class="container">
+<textarea name="" id="text1"></textarea>
+<textarea name="" id="text2"></textarea>
+<button id="save">Сохранить</button>
+<button id="show">История</button>
+</div>
+</body>
+<script type="text/javascript" src=script.js>
+</script>
+</body>
+</html>
