--- a/iterators_generators/task8/index.html
+++ b/iterators_generators/task8/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>task8</title>
+</head>
+<body>Смотри консоль!
+	<script src="script.js"></script>
+</body>
+</html>
