--- a/OOP/Lesson 65/task 5/index.html
+++ b/OOP/Lesson 65/task 5/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8"/>
+	<title>Task4</title>
+</head>
+<body>
+Смотри консоль!
+<script type="text/javascript" src="Validator.js"></script>
+<script type="text/javascript" src="script.js"></script>
+</body>
+</html>
