--- a/Фреймворк Vue/lesson 3/task 10/index.html
+++ b/Фреймворк Vue/lesson 3/task 10/index.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8"/>
+	<title>Task10</title>
+</head>
+<body>
+<div id="app">
+	<ul>
+	<template v-for="item in items" >
+		<li>{{ item }}</li>
+		<li>{{ item }}</li>
+		<li>{{ item }}</li>
+	</template>
+</ul>
+</div>
+<script src="vue.js"></script>
+<script src="script.js"></script>
+</body>
+</html>
