--- a/Фреймворк Vue/lesson 7/task 14/index.html
+++ b/Фреймворк Vue/lesson 7/task 14/index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8"/>
+	<title>Task14</title>
+</head>
+<body>
+<div id="app">
+	<template v-if="ok">
+  <p>Это должно исчезнуть</p>
+  <p>И это тоже</p>
+  <p>...</p>
+</template>
+<button v-on:click="knopka">Скрыть</button>
+</div>
+<script src="vue.js"></script>
+<script src="script.js"></script>
+</body>
+</html>
