--- a/Фреймворк Vue/lesson 10/task 2/index.html
+++ b/Фреймворк Vue/lesson 10/task 2/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8"/>
+	<title>Task14</title>
+</head>
+<body>
+<div id="app">
+	<textarea v-model='text'></textarea>
+		<ul>
+			<li v-for="item in items">{{item}}</li>
+		</ul>
+		<button v-on:click="knopka">Вывести список слов</button>
+</div>
+<script src="vue.js"></script>
+<script src="script.js"></script>
+</body>
+</html>
