--- a/Фреймворк Vue/lesson 10/task 7/index.html
+++ b/Фреймворк Vue/lesson 10/task 7/index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8"/>
+	<title>Task7</title>
+</head>
+<body>
+<div id="app">
+	<input type="checkbox" v-model="items" value="html">html</input>
+		<input type="checkbox" v-model="items" value="css">css</input>
+		<input type="checkbox" v-model="items" value="javascript">js</input>
+		<ul>
+			<li v-for="item in items">{{ item }}</li>
+		</ul>
+</div>
+<script src="vue.js"></script>
+<script src="script.js"></script>
+</body>
+</html>
