--- a/Фреймворк Vue/lesson 10/task 8/index.html
+++ b/Фреймворк Vue/lesson 10/task 8/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8"/>
+	<title>Task7</title>
+</head>
+<body>
+<div id="app">
+		<p>Выберете родной язык</p>
+		<input name="lang" type="radio" v-model="language" value="Русский">ru</input>
+		<input name="lang" type="radio" v-model="language" value="Английский">en</input>
+		<input name="lang" type="radio" v-model="language" value="Немецкий">de</input>
+		<p>Вы выбрали: {{ language }}</p>
+</div>
+<script src="vue.js"></script>
+<script src="script.js"></script>
+</body>
+</html>
