--- a/Фреймворк Vue/lesson 10/task 11/index.html
+++ b/Фреймворк Vue/lesson 10/task 11/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8"/>
+	<title>Task7</title>
+</head>
+<body>
+<div id="app">
+		<select v-model="selected">
+			<option v-for="option in options">{{option}}</option>
+		</select>
+		<p>Вы выбрали: {{selected}}</p>
+</div>
+<script src="vue.js"></script>
+<script src="script.js"></script>
+</body>
+</html>
