--- a/Фреймворк Vue/lesson 15/task 8/index.html
+++ b/Фреймворк Vue/lesson 15/task 8/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8"/>
+	<title>Task11</title>
+</head>
+<body>
+<div id="app">
+		<p v-bind:title="date | деньмесяцгод">Тег</p>
+</div>
+<script src="vue.js"></script>
+<script src="script.js"></script>
+</body>
+</html>
